<resources>
    <string name="app_name">TextOnPicture</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="select_image">Выбрать картинку</string>
    <string name="enter_first_part">Введите первую часть текста</string>
    <string name="enter_second_part">Введите вторую часть текста</string>
    <string name="create">Создать</string>
    <string name="save">Сохранить</string>
</resources>
