<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:id="@+id/btnSelectPicture"
                android:text="@string/select_image"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edText1"
                android:hint="@string/enter_first_part"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:singleLine="true"
                android:layout_below="@+id/btnSelectPicture"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edText2"
                android:hint="@string/enter_second_part"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:singleLine="true"
                android:layout_below="@+id/edText1"/>

            <ImageView
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_marginTop="10dp"
                android:id="@+id/ivPicture"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/edText2"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ivPicture"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:id="@+id/btnCreate"
                android:text="@string/create"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnCreate"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:id="@+id/btnSave"
                android:text="@string/save"/>
        </RelativeLayout>
    </ScrollView>


</LinearLayout>
